Change RequestFactory.send()'s url parameter from String→URI
- Change Endpoint.getURL() to Endpoint.getURI()
  - Change return type from URL to URI
- Change RequestFactory.getInformation()'s endpoint parameter from String→Endpoint